--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  touch-action: manipulation;
+  -ms-touch-action: manipulation;
 }
 
 #grid {
@@ -30,16 +32,16 @@ h1 {
 #dpad {
   display: grid;
   grid-template-columns: 80px 80px 80px;
-  grid-template-rows: 80px 80px 80px;   
-  gap: 5px;                             
+  grid-template-rows: 80px 80px 80px;
+  gap: 5px;
   justify-content: center;
   align-items: center;
 }
 
 #dpad button {
-  font-size: 24px; 
-  padding: 20px;   
-  width: 100%;     
+  font-size: 24px;
+  padding: 20px;
+  width: 100%;
   height: 100%;
 }
 
@@ -49,7 +51,6 @@ h1 {
   align-items: center;
   gap: 1em;
   margin: 1em 0;
-  touch-action: manipulation;
 }
 
 #up {
